# openntpd-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _fix_arch2.py  _fix_armv7.py  compare_receipts.py  compare_receipts_v2.py  final_analysis.py
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/openntpd-rs/: Cargo.toml  README.md
crates/openntpd-rs-core/: Cargo.toml  README.md
crates/openntpd-rs-core/src/: constraint.rs  control.rs  dns.rs  lib.rs  log.rs  peer.rs  refclock.rs  sensor.rs  util.rs
crates/openntpd-rs-core/src/config/: diagnostic.rs  directive.rs  lexer.rs  mod.rs  parser.rs  runtime.rs
crates/openntpd-rs-core/src/ntp/: auth.rs  broadcast.rs  clock.rs  engine.rs  mod.rs  msg.rs  ptp.rs  query.rs  sntp.rs
crates/openntpd-rs-core/src/server/: mod.rs
crates/openntpd-rs-ctl/: Cargo.toml  README.md
crates/openntpd-rs-ctl/src/: bin.rs  lib.rs
crates/openntpd-rs-d/: Cargo.toml  README.md
crates/openntpd-rs-d/src/: bin.rs  lib.rs
crates/openntpd-rs-d/tests/: config_check.rs  ntpctl_integration.rs
crates/openntpd-rs-io/: Cargo.toml  README.md
crates/openntpd-rs-io/src/: clock.rs  constraint_io.rs  ctl.rs  daemon.rs  daemon_impl.rs  dns_child.rs  dns_io.rs  file.rs  globals.rs  imsg.rs  lib.rs  ntp_child.rs  platform.rs  pledge.rs  privsep.rs  process.rs  ptp_io.rs  refclock_io.rs  seccomp.rs  sensor_io.rs  socket.rs  util.rs
crates/openntpd-rs-io/tests/: socket_integration.rs
crates/openntpd-rs/src/: lib.rs
docs/: archaeology.md  deployment-boundary.md  implementation-plan.md  phases-5plus-plan.md
research/openntpd-versions/: Dockerfile
research/oracle/: BUILD_netbsd.md  BUILD_openbsd.md  Dockerfile  Dockerfile.alpine  Dockerfile.debian13  Dockerfile.fedora  Dockerfile.freebsd14  Dockerfile.rocky9  Dockerfile.ubuntu24  build_all.sh  openntpd-7.9p1-alpine-3.20.json  openntpd-7.9p1-debian-12.json  openntpd-7.9p1-debian13.json  openntpd-7.9p1-docker.json  openntpd-7.9p1-freebsd14.json  openntpd-7.9p1-rocky9.json  openntpd-7.9p1-ubuntu24.json
research/oracle/receipts/legacy-invalid/: README.md  parity_2026-07-19T04_51_03Z.json  parity_2026-07-19T04_51_17Z.json  parity_2026-07-19T04_51_32Z.json
research/oracle/receipts/oracle-parity/: parity_2026-07-19T09_58_37Z.json  parity_2026-07-19T09_58_46Z.json  parity_2026-07-19T09_58_55Z.json  parity_2026-07-19T22_20_18Z.json  parity_2026-07-19T22_22_15Z.json  parity_2026-07-19T22_23_15Z.json  parity_2026-07-19T22_32_08Z.json  parity_2026-07-19T22_45_46Z.json  parity_2026-07-19T22_55_24Z.json  parity_2026-07-19T23_38_35Z.json  parity_2026-07-19T23_41_00Z.json  parity_2026-07-19T23_42_03Z.json  parity_2026-07-19T23_43_11Z.json  parity_2026-07-19T23_44_10Z.json  parity_2026-07-20T00_14_00Z.json  parity_2026-07-20T00_14_58Z.json  parity_2026-07-20T00_16_02Z.json  parity_2026-07-20T00_17_00Z.json  parity_2026-07-20T00_17_58Z.json  parity_2026-07-20T00_18_56Z.json  parity_2026-07-20T00_26_58Z.json  parity_2026-07-20T00_29_39Z.json  parity_2026-07-20T00_32_24Z.json  parity_2026-07-20T00_33_24Z.json  parity_2026-07-20T00_34_23Z.json  parity_2026-07-20T00_35_41Z.json  parity_2026-07-20T00_38_23Z.json  parity_2026-07-20T00_39_22Z.json  parity_2026-07-20T00_40_21Z.json  parity_2026-07-20T00_41_20Z.json  parity_2026-07-20T00_42_19Z.json  parity_2026-07-20T00_43_30Z.json
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_20_18Z/missing_option_weight/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_20_18Z/query_from_bad_address/: oracle.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_20_18Z/sensor_weight_neg1/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_20_18Z/utf8_in_config/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_22_15Z/listen_unknown_option/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_22_15Z/missing_option_stratum/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_22_15Z/rtable_neg1/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_22_15Z/sensor_pps_stratum_16/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_22_15Z/servers_wildcard/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_23_15Z/unclosed_comment/: oracle.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_32_08Z/listen_no_address_rtable/: rust.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_32_08Z/listen_with_port/: oracle.stderr
research/oracle/receipts/oracle-parity/stderr_2026-07-19T22_32_08Z/query_from_rtable/: rust.stderr
research/oracle/receipts/self-test/: parity_2026-07-19T05_10_33Z.json  parity_2026-07-19T06_16_05Z.json  parity_2026-07-19T06_45_24Z.json  parity_2026-07-19T07_57_06Z.json  parity_2026-07-20T06_26_05Z.json  parity_2026-07-20T06_26_31Z.json  parity_2026-07-20T08_09_56Z.json
research/perf/: results_20260720T022346Z.json  results_20260720T022653Z.json  results_20260720T023042Z.json  results_20260720T023355Z.json  results_20260720T023613Z.json  results_20260720T023720Z.json  results_20260720T023819Z.json  results_20260720T023927Z.json  results_20260720T024018Z.json  results_20260720T024147Z.json  results_20260720T024513Z.json  results_20260720T024628Z.json  results_20260720T024706Z.json  results_20260720T024805Z.json  results_20260720T024909Z.json  results_20260720T025050Z.json  results_20260720T025202Z.json  results_20260720T032423Z.json  results_20260720T041238Z.json  results_20260720T041328Z.json  results_20260720T055915Z.json  results_20260720T060011Z.json  results_20260720T060113Z.json
research/source-archaeology/: source-archaeology.md
research/vagrant/: Vagrantfile  Vagrantfile.freebsd  Vagrantfile.netbsd  Vagrantfile.openbsd
xtask/: Cargo.toml  README.md
xtask/audit/: forensic.md
xtask/src/: build_musl.rs  check.rs  compat.rs  compat_crates.rs  ctl_integration.rs  forensic.rs  gen.rs  gen_negative.rs  lib.rs  main.rs  no_orig.rs  oracle.rs  parity.rs  perf.rs
(+138 files in other folders)
