[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build automation and freshness gating for OpenNTPD-rs"

[dependencies]
anyhow = { workspace = true }

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"
