[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build automation and freshness gating for OpenNTPD-rs"

[dependencies]
anyhow = { workspace = true }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"
