[package]
name = "openntpd-rs-ctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ntpctl control client binary for openntpd-rs"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "ntpctl"
path = "src/bin.rs"

[dependencies]
anyhow = { workspace = true }
