[package]
name = "openntpd-rs-ctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ntpctl control client binary for openntpd-rs"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "ntpctl"
path = "src/bin.rs"

[dependencies]
openntpd-rs-core = { path = "../openntpd-rs-core", version = "0.8.0" }
openntpd-rs-io = { path = "../openntpd-rs-io", version = "0.8.0" }
anyhow = { workspace = true }
