[package]
name = "openntpd-rs-d"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ntpd daemon binary for openntpd-rs"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "ntpd"
path = "src/bin.rs"

[dependencies]
openntpd-rs-core = { path = "../openntpd-rs-core", version = "0.2.0" }
openntpd-rs-io = { path = "../openntpd-rs-io", version = "0.2.0" }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
