[package]
name = "openntpd-rs-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Real OS I/O layer for OpenNTPD-rs (libc syscall wrappers)"
homepage.workspace = true
repository.workspace = true

[dependencies]
openntpd-rs-core = { path = "../openntpd-rs-core", version = "0.4.0" }
libc = { workspace = true }
log = { workspace = true, optional = true }
once_cell = "1"
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = []

[lib]
name = "openntpd_rs_io"
path = "src/lib.rs"
