[package]
name = "openntpd-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Umbrella facade crate for openntpd-rs (re-exports openntpd-rs-core)"
homepage.workspace = true
repository.workspace = true

[lib]
name = "openntpd_rs"
path = "src/lib.rs"

[dependencies]
openntpd-rs-core = { path = "../openntpd-rs-core", version = "0.9.0" }
openntpd-rs-io = { path = "../openntpd-rs-io", version = "0.9.0" }
openntpd-rs-d = { path = "../openntpd-rs-d", version = "0.9.0" }
openntpd-rs-ctl = { path = "../openntpd-rs-ctl", version = "0.9.0" }
